[gd_scene load_steps=11 format=2]

[ext_resource path="res://gui/ingame/life_pieces.png" type="Texture" id=1]
[ext_resource path="res://gui/ingame/life_pieces.gd" type="Script" id=2]

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 0.705414, 0.779549, 0.785156, 1, 0.137177, 0.405445, 0.566406, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=8]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 2, 0 )
initial_velocity = 40.0
initial_velocity_random = 0.17
angular_velocity = 545.8
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_curve = SubResource( 7 )
color_ramp = SubResource( 5 )

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float glow_level: hint_range(0.0, 1.0) = 0.0;

void fragment() {
	vec4 col = texture(TEXTURE, UV);
	
	if (col.a > 0.0) {
		col.a = 1.0 + glow_level;
	}
	
	
	COLOR = col;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/glow_level = 0.0

[sub_resource type="Animation" id=3]
resource_name = "glow"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("pieces/full:material:shader_param/glow_level")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.3 ),
"transitions": PoolRealArray( 0.466516, 2.07053, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pieces:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.5, 0.7, 0.9, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 3, 3 ), Vector2( -4, -3 ), Vector2( 4, -3 ), Vector2( -5, 3 ), Vector2( 6, 4 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[node name="life_pieces" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -603.0
margin_bottom = -323.0
rect_min_size = Vector2( 37, 37 )
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sparks" type="Particles2D" parent="."]
position = Vector2( 27, 10 )
emitting = false
amount = 300
one_shot = true
explosiveness = 0.6
fixed_fps = 20
process_material = SubResource( 8 )

[node name="pieces" type="Node2D" parent="."]

[node name="full" type="Sprite" parent="pieces"]
material = SubResource( 2 )
position = Vector2( 27, 11 )
texture = ExtResource( 1 )
hframes = 4

[node name="piece1" type="Sprite" parent="pieces"]
visible = false
position = Vector2( 27, 11 )
texture = ExtResource( 1 )
hframes = 4
frame = 3

[node name="piece2" type="Sprite" parent="pieces"]
visible = false
position = Vector2( 27, 11 )
texture = ExtResource( 1 )
hframes = 4
frame = 1

[node name="piece3" type="Sprite" parent="pieces"]
visible = false
position = Vector2( 27, 11 )
texture = ExtResource( 1 )
hframes = 4
frame = 2

[node name="anims" type="AnimationPlayer" parent="."]
anims/glow = SubResource( 3 )
